fix(32): Thicker scrollbars

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -446,8 +446,8 @@ input {
   }
 
   &::-webkit-scrollbar {
-    width: 3px;
-    height: 3px;
+    width: 6px;
+    height: 6px;
     transition: all 0.2s;
   }
 }
